# CoreBotApi

./: Cargo.toml  README.md
src/: banco.rs  config.rs  main.rs
