[package]
name = "coreApiBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["blocking", "multipart"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlite = "*"
rand = "*"
mysql = "*"
regex = "1.5.4"
urlencoding = "2.1.3"
colored = "*"